# pgsql-studio

./: QUICKSTART.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: create_icons.sh
src-tauri/src/: main.rs  models.rs
src-tauri/src/commands/: connection.rs  erd.rs  mod.rs  query.rs  table.rs
src-tauri/src/db/: pool.rs  schema.rs
src-tauri/src/security/: keyring.rs
src/components/: ConnectionManager.tsx  DatabaseTree.tsx  ERDViewer.tsx  QueryEditor.tsx  QueryPlanViewer.tsx  Sidebar.tsx  StatusBar.tsx  TabManager.tsx  TableView.tsx
src/components/ui/: Button.tsx  Dialog.tsx  DropdownMenu.tsx  Input.tsx  Table.tsx
src/hooks/: useConnection.ts  useQuery.ts  useTheme.ts
src/lib/: monaco-setup.ts
src/styles/: globals.css
